Bag fix view on mobile

--- a/src/components/Heading/Headling.sass
+++ b/src/components/Heading/Headling.sass
@@ -10,3 +10,5 @@ header
     margin-top: 18px
 .noback
     width: 10px
+.nosearch
+    width: 18px
