--- a/src/components/MainBlock/MainBlock.sass
+++ b/src/components/MainBlock/MainBlock.sass
@@ -7,9 +7,10 @@
         color: $gray
     &__productItems
         display: flex
-        overflow-x: scroll
+        overflow-x: auto
         margin-top: 22px
         width: 104.8%
+        height: 257px
         .product-item
             margin-right: 20px
             width: 150px
