--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import '../node_modules/reset-css/reset.css';
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Metropolis','Segoe UI', 'Roboto', 'Oxygen',
+  font-family:  'Metropolis','Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
