--- a/src/page/Bag/Bag.sass
+++ b/src/page/Bag/Bag.sass
@@ -19,4 +19,6 @@
         grid-template-rows: 1fr
         grid-gap: 24px
         margin-top: 25px
+        overflow-y: auto
+        max-height: 150px
         
